rust/crates/tmt-cli/src/binding_command/presentation/snapshots/tmt__binding_command__presentation__list_tests__the_list_on_a_narrow_terminal.snap
---
source: crates/tmt-cli/src/binding_command/presentation/list_tests.rs
expression: "render(agents(), narrow, false)"
---
\u{1b}[1mSAVED\u{1b}[0m \u{1b}[2m5\u{1b}[0m
  \u{1b}[38;5;4m●  \u{1b}[39mast…  \u{1b}[38;5;6mcodex:019a2f4c   \u{1b}[39m~/d…
  \u{1b}[38;5;4m●  \u{1b}[39mopu…  \u{1b}[38;5;5mclaude:7c41e9d2  \u{1b}[39m~/d…
  \u{1b}[2m○  \u{1b}[0msol   \u{1b}[38;5;5mclaude:3f9a1c07  \u{1b}[39m      \u{1b}[38;5;4m↻ tmt resume sol\u{1b}[39m
    \u{1b}[2moffline: codex-old · gemini\u{1b}[0m

\u{1b}[1mTEMPORARY\u{1b}[0m \u{1b}[2m2\u{1b}[0m
  \u{1b}[2m○  \u{1b}[0mmam…  \u{1b}[38;5;6mcodex:01a9c3b8   \u{1b}[39m      \u{1b}[38;5;4mstale\u{1b}[39m
  \u{1b}[2m◌  \u{1b}[0mopu…  \u{1b}[2mtmux:%31         \u{1b}[0m/sr…  \u{1b}[38;5;4mshell\u{1b}[39m
