rust/crates/tmt-cli/src/binding_command/presentation/snapshots/tmt__binding_command__presentation__list_tests__the_list_through_a_pipe.snap
---
source: crates/tmt-cli/src/binding_command/presentation/list_tests.rs
expression: "render(agents(), Terminal::PLAIN, false)"
---
SAVED 5
  ●  astra            codex:019a2f4c   ~/dev/tmt-local
  ●  opus-tmt-peer-2  claude:7c41e9d2  ~/dev/tmt-local
  ○  sol              claude:3f9a1c07                       ↻ tmt resume sol
    offline: codex-old · gemini

TEMPORARY 2
  ○  mamezu           codex:01a9c3b8                        stale
  ◌  opus-1           tmux:%31         /srv/builds/nightly  shell
